--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run watch-ts\" \"npm run watch-js\" \"./srcipts/db.sh\"",
-    "build": "npm run build-ts && npm run lint", 
+    "build": "npm run build-ts && npm run lint",
     "watch-ts": "tsc --watch",
     "watch-js": "nodemon dist/index.js",
     "build-ts": "tsc",
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "typeorm": "^0.2.31",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
