--- a/package.json
+++ b/package.json
@@ -4,22 +4,45 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run watch-ts\" \"npm run watch-js\" \"./srcipts/db.sh\"",
+    "start": "concurrently \"npm run watch-ts\" \"npm run watch-js\" \"./scripts/db.sh\"",
     "build": "npm run build-ts && npm run lint",
     "watch-ts": "tsc --watch",
     "watch-js": "nodemon dist/index.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"npm run watch-ts\" \"npm run watch-js\"",
     "build-ts": "tsc",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run watch\" \"npm run client\""
   },
   "author": "Kirsi Trospe",
   "license": "MIT",
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.10",
+    "@types/errorhandler": "^1.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/lusca": "^1.6.2",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/winston": "^2.4.4",
+    "aws-sdk": "^2.848.0",
+    "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "lusca": "^1.6.1",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.5.1",
     "typeorm": "^0.2.31",
     "typescript": "^4.1.5",
     "winston": "^3.3.3"
