--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ tmp
 
 # Build
 public/css/main.css
+/build
 
 # Coverage reports
 coverage
@@ -24,6 +25,7 @@ coverage
 
 # Dependency directory
 node_modules
+node_modules/
 bower_components
 
 # Editors
