--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"npm run watch-ts\" \"npm run watch-js\"",
     "build-ts": "tsc",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run watch\" \"npm run client\""
   },
@@ -23,8 +22,10 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/errorhandler": "^1.5.0",
+    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lusca": "^1.6.2",
+    "@types/node": "^14.14.31",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
@@ -38,20 +39,22 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "lusca": "^1.6.1",
-    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "supertest": "^6.1.3",
     "typeorm": "^0.2.31",
-    "typescript": "^4.1.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.22.0"
+    "@types/jest": "^26.0.20",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.1.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
