--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run watch-ts\" \"npm run watch-js\" \"./scripts/db.sh\"",
-    "build": "npm run build-ts && npm run lint",
+    "start": "concurrently \"npm run watch-ts\" \"npm run watch-js\" \"./scripts/db.sh\" \"npm run db\" \"./scripts/wait.sh\"",
+    "build": "npm run build-ts",
     "watch-ts": "tsc --watch",
     "watch-js": "nodemon dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"npm run watch-ts\" \"npm run watch-js\"",
     "build-ts": "tsc",
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "db": "sequelize db:migrate && sequelize db:seed:all",
+    "test": "jest --forceExit --coverage --detectOpenHandles --verbose false",
+    "watch-test": "npm run test -- --watchAll",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run watch\" \"npm run client\""
   },
@@ -19,6 +21,7 @@
   "dependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/errorhandler": "^1.5.0",
@@ -32,13 +35,17 @@
     "@types/winston": "^2.4.4",
     "aws-sdk": "^2.848.0",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "lusca": "^1.6.1",
+    "nodemailer": "^6.6.2",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
